# devmemoryindex

./: .gitignore  .mcp.json  CODE_REVIEW.md  IMPROVEMENTS.md  README.md  ROADMAP.md  TESTING.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
api/: auth.py  server.py
api/routes/: context.py  memory.py  search.py  webhook.py
api/tests/: conftest.py  test_api.py  test_auth.py
cli/: main.py
cli/commands/: _errors.py  _speak.py  _voice.py  add.py  api_key_cmd.py  ask.py  audit.py  config_cmd.py  consolidate.py  context.py  daemon_cmd.py  dictate.py  enroll.py  export.py  get_cmd.py  graph_cmd.py  graphify_cmd.py  health.py  hook_cmd.py  ingest.py  log_cmd.py  map_cmd.py  mcp_cmd.py  plan_cmd.py  prune.py  repl.py  search.py  serve.py  stats.py  suggest.py  train_cmd.py
cli/tests/: test_cli_lazy_imports.py  test_cli_qa_regressions.py  test_graph_cli.py  test_graphify_cli.py  test_ingest_cli.py  test_mcp_registration_cli.py
connectors/: base.py  browser_connector.py  claude_connector.py  copilot_connector.py  diff_connector.py  filesystem_connector.py  git_connector.py  graphify_connector.py  markdown_connector.py  markdown_notes_connector.py  meeting_connector.py  registry.py  terminal_connector.py  voice_connector.py
connectors/tests/: test_browser_connector.py  test_copilot_connector.py  test_filesystem_connector.py  test_filesystem_connector_resilience.py  test_git_connector.py  test_graphify_connector.py  test_markdown_notes_connector.py  test_meeting_connector.py
core/: backup_read_store.py  codebase_map.py  config.py  context_cache.py  context_engine.py  edge_provider.py  edge_store.py  embeddings.py  hooks.py  intent_classifier.py  llm_backend.py  memory_store.py  ml_intent_classifier.py  plan_engine.py  privacy.py  query_planner.py  rag_engine.py  ranking.py  schema.py  speaker_profile.py  store_provider.py  token_budget.py
core/tests/: test_backup_read_store.py  test_config.py  test_connectors.py  test_consolidate_short_ids.py  test_context_cache.py  test_context_engine.py  test_daemon_jobs.py  test_embeddings_lazy.py  test_fast_answering.py  test_fast_retrieval.py  test_hooks.py  test_hybrid_search.py  test_intent_classifier.py  test_privacy.py  (+8 more)
daemon/: daemon_log.py  launchd.py  response_formatter.py  scheduler.py  systemd.py  voice_pipeline.py  wake_word.py  watcher.py
data/: intent_labels.jsonl
docs/: IMPROVEMENTS_ROADMAP.md  agent-integration-improvements.md  api-auth-plan.md  connector-testing-guide.md  graphify-integration-plan.md  hermes-agent-workflow.md  mcp-clients.md
mcp_server/: AGENT_GUIDE.md  server.py  tools.py
scripts/: delete_existing_file_content_mems.py  reset_importance.py  seed_test_data.py  test_intent.py  truncate_memories.py
tests/: test_docs_alignment.py  test_hermes_agent_workflow_docs.py  test_packaging.py
(+18 files in other folders)
