[project]
name = "devmemoryindex"
version = "0.1.0"
description = "Developer memory index"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
devmemory = "cli.main:app"

[project.optional-dependencies]
voice = [
    "openai-whisper",
    "sounddevice",
    "scipy",
    "pyannote.audio",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pandas",
    "sentence-transformers",
    "lancedb",
    "fastapi",
    "uvicorn",
    "huggingface-hub>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "cli", "connectors", "daemon"]
