[project]
name = "devmemoryindex"
version = "0.1.0"
description = "Developer memory index"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
devmemory = "cli.main:app"
devmemory-mcp-server = "mcp_server.server:main"

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
mcp = [
    "mcp>=1.0",
    "lancedb",
    "sentence-transformers",
]
watch = ["watchdog>=3.0"]
ml = ["scikit-learn>=1.3"]
llm = ["httpx>=0.27"]
speak = ["edge-tts>=6.1"]
voice = [
    "openai-whisper",
    "sounddevice",
    "scipy",
    "pyannote.audio",
]
jarvis = [
    "openwakeword",
    "openai-whisper",
    "sounddevice",
    "scipy",
    "pyannote.audio",
    "edge-tts>=6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pandas",
    "sentence-transformers",
    "lancedb",
    "fastapi",
    "uvicorn",
    "huggingface-hub>=1.4.1",
    "watchdog>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "cli", "connectors", "daemon", "mcp_server"]
